rename page and post

--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ menu:
       url: /posts/
       weight: 10
     - identifier: about
-      name: about
-      url: /about/
+      name: about me
+      url: /about-me/
       weight: 20
 
